--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,61 @@
-.aboutme{
-    background-color: aqua;
-    width:100px;
-    height:100px;
-    margin: 15px 20px 35px 54px;
-    padding: 15px 20px 30px 45px;
-    border: 15px solid rgb(0, 0, 0);
+html,
+body {
+  margin: 0;
+  height: 100%;
+  width: 100%;
 }
 
-.projects{
-    background-color: aqua;
-    width: 100px;
-    height: 100px;
-    margin: 15px 20px 35px 54px;
-    padding: 15px 20px 30px 45px;
-    border: 15px solid rgb(0, 0, 0);
-
+main {
+  height: 100%;
+  width: 100%;
 }
-
-.contact{
-    background-color: aqua;
-    width: 100px;
-    height: 100px;
-    margin: 15px 20px 35px 54px;
-    padding: 15px 20px 30px 45px;
-    border: 15px solid rgb(0, 0, 0);
-
+nav{
+    background-color: black;
 }
+section {
+font-family: sans-serif;
+  font-size: 12ch;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
+  section:nth-child(1) {
+    background-color: #8BC6EC;
+background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
+    color: white;
+  }
+  
+  section:nth-child(2) {
+    background-color: #8BC6EC;
+background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
+    color: white;
+  }
+
+  section:nth-child(3) {
+    background-color: #8BC6EC;
+background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
+    color: white;
+  }
+
+  section:nth-child(4) {
+    background-color: #8BC6EC;
+background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
+    color: white;
+  }
+
+.container{
+    display: flex;
+    height: 30%;
+    width: 30%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
